@@ -13,10 +13,7 @@ definition
   "hom s = rq(rec(s)) @ (if rbit(rec s) = sbit(sen s) then sq(sen s)
                          else tl(sq(sen s)))"
 
-declaration {* fn _ =>
-  (* repeated from Traces.ML *)
-  Classical.map_cs (fn cs => cs delSWrapper "split_all_tac")
-*}
+setup {* map_theory_claset (fn ctxt => ctxt delSWrapper "split_all_tac") *}
 
 lemmas hom_ioas = Spec.ioa_def Spec.trans_def sender_trans_def receiver_trans_def impl_ioas
   and impl_asigs = sender_asig_def receiver_asig_def srch_asig_def rsch_asig_def
